[metadata]
name = yeast_mrcnn 
version = attr: yeast_mrcnn._version.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hekstra-Lab/yeast-mcrnn
author = Ian Hunt-Isaak, John Russell
author_email = ianhuntisaak@g.harvard.edu, johnrussell@g.harvard.edu
license = MIT License
license_file = LICENSE
platforms = Linux, Mac OS X, Windows
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    numpy
    pandas
    read_roi
    tifffile
    torch
python_requires = >=3.6

[options.extras_require]
test =
    black
    fsspec>=0.3.3
    pytest

[flake8]
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503, E501
per-file-ignores =
    */__init__.py: F401, F403
